snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha512
768420c2b989d30011ed328af4bf6c18655fc57e51008eb7c023021c447916f3ee7d0d709ef04989f76dca8476eddebadc4fa83cb11d13b9fe53734b92ce19b4